Fixed to support default group categories
